--- a/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
+++ b/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MaterialDesignColors" Version="5.2.2-ci921" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.2-ci921" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
