--- a/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
+++ b/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="MaterialDesignThemes" Version="5.2.2-ci921" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2" />
+
   </ItemGroup>
 
 </Project>
