--- a/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
+++ b/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
@@ -11,8 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.5.1" />
-    <PackageReference Include="MaterialDesignColors" Version="5.2.2-ci921" />
-    <PackageReference Include="MaterialDesignThemes" Version="5.2.2-ci921" />
+    <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
+    <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
+    <PackageReference Include="MaterialDesignThemes.Wpf" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2" />
