feat: added login page shadow

--- a/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
+++ b/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes.MahApps" Version="5.2.1" />
