--- a/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
+++ b/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
@@ -22,6 +22,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2" />
     <PackageReference Include="MVVMEssentials.WPF" Version="1.0.3" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="8.2.0" />
 
   </ItemGroup>
 
