--- a/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
+++ b/Tool-Data-Inventory-Manager/Tool-Data-Inventory-Manager.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Firebase.Auth" Version="1.0.0" />
     <PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
