--- a/Tool-Data-Inventory-Manager/.env.example
+++ b/Tool-Data-Inventory-Manager/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your actual values
 
 # SQL Server connection string
-SQL_SERVER="Server=localhost\\SQLEXPRESS;Database=Inventory Manager;Trusted_Connection=True;Encrypt=False;"
+SQL_SERVER="Server=localhost\\SQLEXPRESS;Database=Inventory Manager;Trusted_Connection=True;Encrypt=False;Integrated Sequrity=True;"
 
 # Email sender configuration (e.g., for notifications or error reports)
 SENDER_EMAIL="your_email@example.com"
